# HydroSovereign-AI-Engine-HSAE-v602

./: .gitignore  LICENSE  README.md  REVIEWER_RESPONSE.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
hydrosovereign_hsae/: __init__.py  indices.py  treaty_classifier.py  validation.py
streamlit_app/: README.md  ai_ensemble.py  ai_forecast.py  app.py  arabic_ui.py  audit_engine.py  basins_data.py  benchmark_comparison.py  case_study_gerd.py  climate_engine.py  conflict_index.py  digital_twin.py  example_run.py  export_engine.py  export_qgis.py  gee_auth.py  gee_connector.py  gee_engine.py  gee_raster.py  gee_realtime_reader.py  glofas_loader.py  grace_fo.py  grdc_loader.py  grdc_real_loader.py  ground_data.py  hbv_calibration.py  hbv_calibration_page.py  hbv_model.py  hbv_params_blue_nile_gerd.json  hsae_ai.py  hsae_alerts.py  hsae_audit.py  hsae_climate.py  hsae_data.db  hsae_db.py  hsae_devops.py  hsae_export.py  hsae_gee_data.py  hsae_groundwater.py  hsae_hbv.py  (+26 more)
streamlit_app/.streamlit/: config.toml
streamlit_app/data/: NileFlow_v228_RSE_SAR.csv  gee_historical.json  gee_realtime.json  tfdd_crm_dataset.csv
streamlit_app/hydrosovereign/: __init__.py  __main__.py  alerts.py  api.py  api_server.py  async_alerts.py  basins.py  cli.py  hbv.py  indices.py  indices_legacy.py  legal.py  provenance.py
streamlit_app/hydrosovereign/ai/: __init__.py  bayesian.py  conflict.py  forecast.py  negotiation.py
streamlit_app/hydrosovereign/data/: __init__.py  fetchers.py  nile_basin_sample.json  tfdd_icow_cases.csv
streamlit_app/hydrosovereign/models/: __init__.py  hbv.py  tfdd_crm_model.joblib
streamlit_app/hydrosovereign/viz/: __init__.py  maps.py  plots.py
streamlit_app/hydrosovereign_hsae/: ingestion.py  treaty_classifier.py
streamlit_app/hydrosovereign_hsae/models/: tfdd_crm_model.joblib
tests/: test_indices.py  test_indices_remaining.py  test_ingestion.py  test_provenance.py  test_treaty_classifier.py  test_validation.py
