[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrosovereign-hsae"
version = "6.7.3"
description = "HydroSovereign AI Engine (HSAE) — provenance-bound transboundary water analysis with honest, data-driven indices"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
authors = [{name = "Seifeldin M.G. Alkhedir"}]
keywords = ["hydrology", "water-law", "transboundary", "UNWC", "provenance",
            "TFDD", "GRDC", "remote-sensing", "open-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = ["numpy", "scikit-learn", "joblib"]

[project.optional-dependencies]
data = ["pandas", "openpyxl"]
dev = ["pytest", "flake8"]

[project.urls]
Repository = "https://github.com/saifeldinkhedir-coder/HydroSovereign-AI-Engine-HSAE-v602"

[tool.setuptools.packages.find]
where = ["."]
include = ["hydrosovereign_hsae*"]

[tool.setuptools.package-data]
"hydrosovereign_hsae" = ["models/*.joblib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
