[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrosovereign"
version = "6.8.1"
description = "HydroSovereign AI Engine (HSAE) — Automated satellite-driven transboundary water law compliance for 26 globally contested river basins"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.9"
authors = [{name = "Seifeldin M.G. Alkhedir", email = "saifeldinkhedir@gmail.com"}]
maintainers = [{name = "Seifeldin M.G. Alkhedir", email = "saifeldinkhedir@gmail.com"}]
keywords = [
    "hydrology","water-law","transboundary","UNWC","satellite",
    "remote-sensing","GEE","Google-Earth-Engine","HBV96","SCE-UA",
    "ATDI","AHIFD","AFSF","AHLB","ASI","ATCI","AWSI",
    "eWaterCycle","BMI","GeoAgent","water-sovereignty",
    "water-diplomacy","GERD","Blue-Nile","Mekong","Euphrates",
    "QGIS","water-resources","rainfall-runoff","NSE","KGE",
    "ICJ","PCA","water-conflict","river-basin","dam","Bayesian"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Environment :: Console",
    "Environment :: Web Environment",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "requests>=2.31",
]

[project.optional-dependencies]
gee     = ["earthengine-api>=0.1.400"]
viz     = ["plotly>=5.18","folium>=0.16","matplotlib>=3.7"]
server  = ["fastapi>=0.110","uvicorn>=0.27"]
jupyter = ["jupyter>=1.0","ipykernel>=6.0","ipywidgets>=8.0"]
full    = ["hydrosovereign[gee,viz,server,jupyter]"]

[project.scripts]
hydrosovereign = "hydrosovereign.cli:main"
hsae           = "hydrosovereign.cli:main"

[project.urls]
Homepage       = "https://github.com/saifeldinkhedir-coder/hydrosovereign"
Repository     = "https://github.com/saifeldinkhedir-coder/HydroSovereign-AI-Engine-HSAE-v601"
PyPI           = "https://pypi.org/project/hydrosovereign/"
Documentation  = "https://github.com/saifeldinkhedir-coder/HydroSovereign-AI-Engine-HSAE-v601/raw/main/hsae_qgis/HSAE_v601_QGIS_Plugin_Manual_v6.docx"
"QGIS Plugin"  = "https://plugins.qgis.org/plugins/hsae_qgis/"
Preprint       = "https://papers.ssrn.com/sol3/papers.cfm?abstract_id=6661396"
DOI            = "https://doi.org/10.5281/zenodo.19180160"
"Bug Tracker"  = "https://github.com/saifeldinkhedir-coder/HydroSovereign-AI-Engine-HSAE-v601/issues"
Changelog      = "https://github.com/saifeldinkhedir-coder/hydrosovereign/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["hydrosovereign*"]

[tool.setuptools.package-data]
"hydrosovereign"      = ["py.typed","*.json","*.csv","models/*.joblib"]
"hydrosovereign.data" = ["*.json","*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
strict         = false
ignore_missing_imports = true
